Firefox displays glyphs instead of text with gfx.e10s.font-list.shared set to true
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | disabled |
| firefox80 | --- | disabled |
| firefox81 | --- | disabled |
| firefox82 | --- | fixed |
People
(Reporter: bws42, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
This began with the second build of June 22nd. Turning off the shared font list allows the proper fonts to be used.
I'm running on Debian 8 with a 3.16.x kernel. Let me know if there are specific library versions you would like, or if there's other debugging I can help with.
| Assignee | ||
Comment 1•5 years ago
|
||
Ugh, that's bad... thanks for reporting it promptly! If you look at the Element Inspector in the developer tools, what font (or fonts) does it report as being used (in the Fonts panel, not the CSS styles)? (If it shows anything readable, that is... or does the Inspector appear entirely as missing-character boxes as well?)
Do all webpages end up like this, or does it only affect certain pages?
| Reporter | ||
Comment 2•5 years ago
|
||
Glyphs are everywhere. I've attached a screenshot of the font section for you.
Here's a translation of the red box part, thanks to asciitable
ClearlyU PU):style
| Assignee | ||
Comment 3•5 years ago
|
||
Thanks! It appears we're mishandling something about the way the ClearlyU fonts are configured. I'll try to look into this.
Could you see if there are any fontconfig setup files that specifically relate to ClearlyU? I think something like
fgrep -r -i ClearlyU /etc/fonts
would list any relevant config files. If you find any, please attach them here so I can see how it's handled.
Also just to check, when gfx.e10s.font-list.shared is disabled, what font(s) get used here; is it still ClearlyU? (I'm guessing so, but would like to be sure.)
(For now, I suspect that if you were to disable/uninstall the ClearlyU font package -- not sure exactly what it's called in Debian -- the issue would go away, but obviously we need to fix this to work reliably.)
| Reporter | ||
Comment 4•5 years ago
|
||
I don't think the ClearlyU font is the problem, rather the problem is Firefox trying to use it as I don't have it installed (the grep returned nothing).
The screenshot I originally submitted has no font styles associated with it, and Firefox uses DejaVu Serif normally. All pages on the internet display these glyphs instead of the appropriate text.
| Reporter | ||
Comment 5•5 years ago
|
||
Okay, I'm wrong. ClearlyU is not listed in /etc/fonts, but I do have some .pcf.gz files for it in /usr/share/fonts/X11/misc. If I move those files aside the glyphs change a bit, looks like they need more vertical space, and the font being used is Twemoji Mozilla(?)
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 11•5 years ago
|
||
This issue affects openSUSE 13.2 32bit (with a supported set of libraries according to FF78ß release notes). Firefox cannot load any local fonts. All local font glyphs are displayed as hex boxes, including those in FF chrome. Web fonts still work.
This issue does not affect current openSUSE Tumbleweed 64bit.
Updated•5 years ago
|
Updated•5 years ago
|
Comment 12•5 years ago
•
|
||
I started seeing this with Nightly today on an old Ubuntu "trusty" image, this was just enabled by default in bug 1533462 (17b0768200fb), turning off gfx.e10s.font-list.shared fixes it for me. If I can be of any help debugging please let me know.
| Assignee | ||
Comment 13•5 years ago
|
||
(In reply to Adam Gashlin (he/him) [:agashlin] from comment #12)
I started seeing this with Nightly today on an old Ubuntu "trusty" image, this was just enabled by default in bug 1533462 (17b0768200fb), turning off gfx.e10s.font-list.shared fixes it for me. If I can be of any help debugging please let me know.
I have a suspicion what's going on here. Could you let me know what fc-list --version reports on that system, please? (See also https://bugzilla.mozilla.org/show_bug.cgi?id=1663833#c5)
| Assignee | ||
Updated•5 years ago
|
| Reporter | ||
Comment 14•5 years ago
|
||
fc-list --version
fontconfig version 2.11.0
Comment 15•5 years ago
|
||
I also have fontconfig version 2.11.0, and apt says the package is 2.11.0-0ubuntu4.2. Thanks!
| Assignee | ||
Comment 16•5 years ago
|
||
Thanks for confirming that, both of you. Given this, I think I understand the root of the problem, and should have a fix ready shortly.
| Assignee | ||
Comment 17•5 years ago
|
||
Updated•5 years ago
|
Comment 19•5 years ago
|
||
Comment 20•5 years ago
|
||
I grabbed the autoland build, it works on my system with the pref set, thanks!
Comment 21•5 years ago
|
||
| bugherder | ||
Comment 22•5 years ago
|
||
Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•5 years ago
|
Description
•