Bug 1647868 - Work around FcNameParse bug in versions around fontconfig 2.11.0, to avoid broken fonts when the shared font-list is enabled. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D89653